syntax = "proto3";

option csharp_namespace = "LoggServidor";

package logger;

service LoggerManejador{
	rpc ObtenerLogs(Filtros) returns (LogsRespuesta);
}

message LogsRespuesta {
  repeated string logs = 1;
}

message Filtros{
	string usuario = 1;
	string juego = 2;
	string fecha = 3;
}